# quantum

./: .gitmodules  README.md  autogen.sh  configure.ac
src/: Circuit.cxx  Circuit.h  Complex.cxx  Complex.h  EntangledState.cxx  EntangledState.h  Gates.cxx  Gates.h  InputCollector.cxx  InputCollector.h  Makefile.am  QMatrix.cxx  QMatrix.h  QMatrixX.h  QState.cxx  QState.h  QVector.cxx  QVector.h  QuBit.cxx  QuBit.h  QuBitField.cxx  QuBitField.h  State.cxx  State.h  XState.cxx  XState.h  YState.cxx  YState.h  ZState.cxx  ZState.h  formula.cxx  formula.h  formula_test.cxx  formula_test_expected.cxx  quantum.cxx  rational_test.cxx
